Pagination Created In Widget

--- a/wp-content/themes/twentynineteen-child/style.css
+++ b/wp-content/themes/twentynineteen-child/style.css
@@ -11,3 +11,26 @@
  Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
  Text Domain:  twentynineteenchild
 */
+
+.wp-pagenavi {
+    clear: both;
+}
+
+.wp-pagenavi a, .wp-pagenavi span {
+    color: #FFF;
+    text-decoration: none;
+    background-color:#6FB7E9;
+    border: 1px solid #B2D1E5;
+    padding: 5px 5px;
+    margin: 2px;
+}
+
+.wp-pagenavi a:hover, .wp-pagenavi span.current {
+    border-color: #E9F2F9;
+    background-color:#6FB7E9;
+}
+
+.wp-pagenavi span.current {
+    font-weight: bold;
+    background-color:#3C8DC5;
+}
